@@ -126,3 +126,7 @@
 2011-08-03  Myungjae Lee
 
 	* Fix eina_share_common_del and eina_share_common_ref to release lock on failure.
+
+2011-09-05  Cedric Bail
+
+	* Add eina_inlist_sorted_state_insert and helper.
